force-app/main/default/objects/Revenue_Stream__c/Revenue_Stream__c.object-meta.xml
<CustomObject>
    <description>Tracks all revenue sources and performance across different revenue streams</description>
    <label>Revenue Stream</label>
    <nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Revenue Stream Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Streams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>