force-app/main/default/objects/Revenue_Stream__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenue Streams</relationshipLabel>
    <relationshipName>Revenue_Streams</relationshipName>
    <description>Customer account for this revenue stream</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>