force-app/main/default/objects/Revenue_Stream__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <label>Commission Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Commission rate for sales team (e.g., 10% = 0.10)</description>
</CustomField>