force-app/main/default/objects/Revenue_Stream__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
    <description>End date of this revenue stream (if applicable)</description>
</CustomField>