force-app/main/default/objects/Revenue_Stream__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Additional notes and context about this revenue stream</description>
</CustomField>