force-app/main/default/objects/Revenue_Stream__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Revenue Streams</relationshipLabel>
    <relationshipName>Revenue_Streams</relationshipName>
    <description>Parent opportunity for this revenue stream</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>