force-app/main/default/objects/Revenue_Stream__c/fields/Partner_Share__c.field-meta.xml
<CustomField>
    <fullName>Partner_Share__c</fullName>
    <label>Partner Share</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Partner/affiliate revenue share percentage (for revenue sharing deals)</description>
</CustomField>