force-app/main/default/objects/Revenue_Stream__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <description>Start date of this revenue stream</description>
</CustomField>