force-app/main/default/objects/Revenue_Stream__c/fields/Stream_Type__c.field-meta.xml
<CustomField>
    <fullName>Stream_Type__c</fullName>
    <label>Stream Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription - Premium</fullName>
            </value>
            <value>
                <fullName>Subscription - Creator</fullName>
            </value>
            <value>
                <fullName>Subscription - Team Bronze</fullName>
            </value>
            <value>
                <fullName>Subscription - Team Silver</fullName>
            </value>
            <value>
                <fullName>Subscription - Team Gold</fullName>
            </value>
            <value>
                <fullName>Advertising - Display</fullName>
            </value>
            <value>
                <fullName>Advertising - Video</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Media Licensing - Content</fullName>
            </value>
            <value>
                <fullName>Media Licensing - Data</fullName>
            </value>
            <value>
                <fullName>League Partnership</fullName>
            </value>
            <value>
                <fullName>Team Portal</fullName>
            </value>
            <value>
                <fullName>API Access</fullName>
            </value>
            <value>
                <fullName>Affiliate - Betting</fullName>
            </value>
            <value>
                <fullName>Strategic Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of revenue stream (Subscription, Advertising, Sponsorship, etc.)</description>
</CustomField>