force-app/main/default/objects/Revenue_Stream__c/fields/Women_Premium_Applied__c.field-meta.xml
<CustomField>
    <fullName>Women_Premium_Applied__c</fullName>
    <label>Women's Premium Applied</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates if 20% women's sports premium has been applied to this revenue stream (for sponsorships)</description>
</CustomField>